--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         fetch-depth: 0
     - name: Git log
-      run: git log $(git describe --tags ${{ github.ref_name }}^)..${{ github.ref_name }} --pretty=format:"[%h] %s"
+      run: git log $(git describe --tags --abbrev=0 ${{ github.ref_name }}^)..${{ github.ref_name }} --pretty=format:"[%h] %s"
     - uses: ncipollo/release-action@v1
       with:
         allowUpdates: true
