--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -52,6 +52,6 @@ jobs:
       run: echo "# Changes" > changes.md && git log $(git describe --tags --abbrev=0 ${{ github.ref_name }}^)..${{ github.ref_name }} --pretty=format:"[%h] %s" >> changes.md
     - uses: ncipollo/release-action@v1
       with:
-        allowUpdates: true
         name: oputil ${{ github.ref_name }}
         bodyFile: "changes.md"
+        artifacts: "oputil-macos,oputil-ubuntu,oputil-windows.exe"
