--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -27,7 +27,7 @@ jobs:
     - uses: actions/upload-artifact@v3
       if: ${{ matrix.os != 'windows' }}
       with:
-        name: oputil-${{ matrix.os }}
+        name: ${{ matrix.os }}
         path: oputil-${{ matrix.os }}
         retention-days: 1
     - uses: actions/upload-artifact@v3
